[metadata]
name = WarpedDungeon
version = 0.1.2
author = Oscar Goldman
description = Code for exploring the warped dungeon in Senley Forest.
long_description = file: README.md 
long_description_content_type = text/markdown

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires = importlib-resources>=1.1.0; python_version < '3.9'

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    warped-dungeon = WarpedDungeon.explore:explore

[options.package_data]
WarpedDungeon = data/*.json