[metadata]
name = WarpedDungeon
version = 0.1.3
author = Oscar Goldman
description = Code for exploring the warped dungeon in Senley Forest.
long_description = file: README.md 
long_description_content_type = text/markdown
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    importlib-resources>=1.1.0; python_version < '3.9'

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.entry_points]
console_scripts = 
    warped-dungeon = WarpedDungeon.explore:explore

[options.package_data]
WarpedDungeon = 
    data/*.json
    py.typed

[flake8]
max-line-length = 160